--- a/To-Do list/index.html
+++ b/To-Do list/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
     <div class="todo-app">
-        <h2>To-Do List <img src="1.webp"></h2>
+        <h2>TO-DO LIST <img src="1.webp"></h2>
     <div class="row">
         <input type="text" id="input-box" placeholder="Add your text">
         <button onclick="addTask()">Add</button>
